# tree-sitter-hungarian

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  Readme.md  binding.gyp  get_queries.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  set_queries.sh  setup.py  test.sh  tree-sitter.json
bindings/c/: tree-sitter-hungarian.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hungarian/: __init__.py  binding.c
bindings/python/tree_sitter_vhdl/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHungarian/: hungarian.h
bindings/swift/TreeSitterHungarianTests/: TreeSitterHungarianTests.swift
injections/c/: injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: names.c
